# tau2-enhanced

./: .gitignore  AI_REPORT.md  README.md  check_domain.py  non_enhanced_analysis.md  pyproject.toml  tau2-enhanced
samples/analysis/airline_gemini2_5_flash_10tasks_context_agent/: analysis_report.md  enhanced_analysis_report.html
samples/analysis/airline_gemini2_5_flash_10tasks_enhanced_agent/: analysis_report.md  enhanced_analysis_report.html
samples/analysis/airline_gemini2_5_flash_10tasks_llm_agent/: analysis_report.md  enhanced_analysis_report.html
samples/analysis/airline_gemini2_5_flash_10tasks_retry_agent/: analysis_report.md  enhanced_analysis_report.html
samples/analysis/baseline_airline_xai_grok3_gemini2_5_flash/: analysis_report.md  baseline_airline_xai_grok3_gemini2_5_flash_action_breakdown.csv  baseline_airline_xai_grok3_gemini2_5_flash_reward_breakdown.csv  enhanced_analysis_report.html
samples/logs/: airline_gemini2_5_flash_10tasks_2t.json  airline_gemini2_5_flash_10tasks_2t_context_agent.json  airline_gemini2_5_flash_10tasks_2t_context_agent_enhanced_logs.json  airline_gemini2_5_flash_10tasks_2t_enhanced_agent.json  airline_gemini2_5_flash_10tasks_2t_enhanced_agent_enhanced_logs.json  airline_gemini2_5_flash_10tasks_2t_enhanced_logs.json  airline_gemini2_5_flash_10tasks_2t_retry_agent.json  airline_gemini2_5_flash_10tasks_2t_retry_agent_enhanced_logs.json
scripts/: README.md  analyze_simple_logs.py
scripts/non_enhanced/: analyze_breakdown.py  failure_analysis.py
tau2_enhanced/: __init__.py  cli.py  domain_registration.py  enhanced_runner.py
tau2_enhanced/agents/: __init__.py  agent_registry.py  context_agent.py  enhanced_agent.py  retry_agent.py
tau2_enhanced/analysis/: __init__.py  analyzer.py  visualizer.py
tau2_enhanced/data_model/: __init__.py  enhanced_simulation.py
tau2_enhanced/environments/: domain_environments.py  logging_environment.py
tau2_enhanced/logging/: __init__.py  events.py  execution_logger.py  state_tracker.py
tau2_enhanced/tests/: __init__.py  test_agent_registry.py  test_enhanced_agents.py
