[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "tau2-enhanced"
version = "0.1.0"
description = "Enhanced logging capabilities for tau2-bench evaluation framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jit Ray Chowdhury", email = "jit.ray.c@gmail.com" }
]
keywords = ["tau2", "llm", "evaluation", "logging", "debugging", "analysis"]


dependencies = [
    "tau2>=0.0.1",
    "pandas>=2.2.0",
    "plotly>=5.17.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "typing-extensions>=4.8.0",
    "click>=8.1.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.23.0",
]
analysis = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
]



[project.urls]
Repository = "https://github.com/jitrc/tau2-enhanced"

[project.entry-points."tau2.domains"]
airline_enhanced = "tau2_enhanced.environments.domain_environments"

[tool.pdm]
version = { source = "file", path = "tau2_enhanced/__init__.py" }

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]
lint = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]  # line too long, handled by black
line-length = 88
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/**/*.py" = ["S101"]  # assert used

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=tau2_enhanced",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
